Changes in version 0.7.2
------------------------

* Fix for StatusBar timer being reset at each epoch in island evolution
  (ISSUE#19).

* Added RandomMigration as an alternative strategy for island evolution.


Changes in version 0.7.1
------------------------

* Added EvolutionStrategyEngine to provide both (mu+lambda) and (mu,lambda)
  evolution strategies.

* Use final version of Google Collections 1.0.

* Tweaked concurrency settings in IslandEvolution (no need for more than one
  thread per island).

* Fixed look-and-feel issues in example applets (make sure all components are
  created after the look-and-feel is set.

* Reverted 0.7.0 change to generation numbering in AbstractEvolutionEngine.
  Numbering is correct if the initial population is considered to be the first
  generation.


Changes in version 0.7.0
------------------------

* Refactored internals to make it easier for the framework to provide different
  evolutionary algorithm variants.  Different types of evolutionary algorithm
  are supported by different sub-classes of AbstractEvolutionEngine, with
  different implementations of the nextEvolutionStep method.  The main
  EvolutionEngine implementation is now called GenerationalEvolutionEngine.

* Concurrency control is no longer supported through inheritance.  Removed
  ConcurrentEvolutionEngine and SequentialEvolutionEngine and added the
  setSingleThreaded method to AbstractEvolutionEngine.

* Added first-class support for steady-state evolution in the form of the new
  SteadyStateEvolutionEngine.

* Added SigmaScaling selection strategy.

* Added ListInversion evolutionary operator.  Randomly reverses subsections of
  lists.

* Added variable probability constructor to ListOrderCrossover.

* Introduced support for island model evolution.

* Added islands view to the evolution monitor so that the state of individual
  island populations can be tracked.

* Fixed generation numbering in AbstractEvolutionEngine.  It was supposed to be