@@ -5,5 +5,5 @@ temp
 website
 */build
 *.iws
-etc/nbproject/private
+.idea/workspace.xml
 .DS_Store
